--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/node": "^20.8.7",
     "@types/node-cron": "^3.0.11",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.0",
+    "clsx": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -29,10 +31,13 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.292.0",
     "mongoose": "^7.6.3",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.6",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
